<resources>
    <string name="title_activity_info_window" translatable="false">InfoWindowActivity</string>
    <string name="title_activity_welcome_screen" translatable="false">WelcomeScreen</string>
    <string name="title_activity_splash" translatable="false">Splash</string>
    <string name="title_activity_directions" translatable="false">Directions</string>
    <string name="title_activity_create_route" translatable="false">CreateRouteActivity</string>
    <string name="offline" translatable="false">OFFLINE</string>
    <string-array name="menu_array">
        <item>Hello</item>
        <item/>
        <item>Bike lanes</item>
        <item>Places</item>
        <item>Bike sharing</item>
        <item>Parking</item>
        <item>Parks</item>
        <item>Free Wifi SP</item>
        <item>Alerts</item>
        <item>Write for us</item>
    </string-array>
    <string-array name="menu_array_descriptions">
        <item>My Account</item>
        <item/>
        <item>Permanent, recreational and preferential</item>
        <item>Workshops, stores, coffees…</item>
        <item>stations</item>
        <item>Outdoor and indoor bike racks</item>
        <item>Parks with bike lanes</item>
        <item>Free city wifi</item>
        <item>sent by users</item>
        <item/>
    </string-array>
    <string name="app_name">Pedala SP</string>
    <string name="action_settings">Settings</string>
    <string name="add_bikepoint">Add a Bike Point</string>
    <string name="alerta">Alert</string>
    <string name="avisar_erro">Report error</string>
    <string name="bem_vindo">Welcome to Pedala SP</string>
    <string name="beta_route_mode_title">Beta warning</string>
    <string name="beta_route_mode_warning">ATTENTION: The route function is being tested and the route loaded can be improper and dangerous for cycling</string>
    <string name="buraco">POTHOLE</string>
    <string name="buscar_novamente">Search again</string>
    <string name="carregando_rotas">Loading routes</string>
    <string name="chegada">End</string>
    <string name="create_route">Create route</string>
    <string name="current_place_for_origin">Use your current location as route start?</string>
    <string name="de">From: </string>
    <string name="delete_last_point">Delete</string>
    <string name="destino">Destination</string>
    <string name="detalhes">give more details…</string>
    <string name="drawer_close">Closed</string>
    <string name="drawer_open">Open</string>
    <string name="empty_address_dialog_message">You have to type both addresses to load a route</string>
    <string name="empty_address_dialog_title">Empty address field</string>
    <string name="end_destino_nao_encontrado_titulo">Destination address not found</string>
    <string name="end_nao_encontrado_mensagem">The address could not be found in São Paulo. To make searching more effective, avoid abreviations. </string>
    <string name="end_nao_encontrado_titulo">Address not found</string>
    <string name="end_origem_nao_encontrado_titulo">Origin address not found</string>
    <string name="endereco_aproximado">Nearby</string>
    <string name="entendi">Understood</string>
    <string name="enviar_email">Send</string>
    <string name="envie_sugestao">Write for us</string>
    <string name="escolha_no_mapa">What\'s the exact location of the Bike Point?</string>
    <string name="fechar">Close</string>
    <string name="from_my_location">From my current location</string>
    <string name="from_other_location">Choose another address</string>
    <string name="localizacao">location (click on the map)</string>
    <string name="mais">MORE</string>
    <string name="marcador_inserido">(inserted marker)</string>
    <string name="network_alert_dialog">Check your connection.</string>
    <string name="network_alert_dialog_splash">You need an active network to start the app on the first time. Check you connection</string>
    <string name="network_alert_title">No network connection</string>
    <string name="network_settings">Network settings</string>
    <string name="network_update_alert_dialog">We couldn\'t refresh. Check you network.</string>
    <string name="notifySolved">Flag as inexistent</string>
    <string name="obrigado_feedback">Thanks for the feedback!</string>
    <string name="ok">OK</string>
    <string name="origem">Origin</string>
    <string name="para">To: </string>
    <string name="partida">Origin</string>
    <string name="preencha_campos">Please, complete all the fields.</string>
    <string name="refresh">Refresh</string>
    <string name="report_description">Alert problem on your way</string>
    <string name="route_origin_hint">Insert origin</string>
    <string name="route_destination_hint">Insert destination</string>
    <string name="runkeeper_login">Connect to Runkeeper</string>
    <string name="sem_conexao">We coudn\'t download the data. Check you connection.</string>
    <string name="seu_email">Email</string>
    <string name="seu_nome">Name</string>
    <string name="splash">Loading…</string>
    <string name="splash_info">Loading data…</string>
    <string name="splash_nenhuma_camada">We coudn\'t load any app data. Check you network.</string>
    <string name="splash_just_places">Oops… We could just load Places.</string>
    <string name="splash_just_places_bs">Oops… We could just load Places and Bike Sampa bike sharing stations.</string>
    <string name="splash_just_places_cs">Oops… We could just load Places and Ciclo Sampa bike sharing stations.</string>
    <string name="splash_just_places_bscs">Oops… We could just load Places and Bike Sharing Stations.</string>
    <string name="splash_error_places">Oops… We couldn\'t load Places.</string>
    <string name="splash_error_places_bs">Oops… We couldn\'t load Places and Bike Sampa sharing stations.</string>
    <string name="splash_error_places_cs">Oops… We couldn\'t load Places and Ciclo Sampa sharing stations.</string>
    <string name="splash_error_places_bscs">Oops… We couldn\'t load Places and Bike Sharing Stations.</string>
    <string name="splash_error_bscs">Oops… We couldn\'t load Bike Sharing Stations.</string>
    <string name="splash_error_bs">Oops… We couldn\'t load Bike Sampa bike sharing stations.</string>
    <string name="splash_error_cs">Oops… We couldn\'t load Ciclo Sampa bike sharing stations.</string>
    <string name="splash_just_bs">Oops… We could just load Bike Sampa bike sharing stations.</string>
    <string name="splash_just_cs">Oops… We could just load Ciclo Sampa bike sharing stations.</string>
    <string name="splash_somente_estacao">Oops… We could just load Bike Sharing Stations.</string>
    <string name="start_network_ad">We couldn\'t load updated data. The app will show data from you last access.</string>
    <string name="texto_do_email">Write you message</string>
    <string name="title_activity_drawer_exp_splash">Choose what you want to visualize</string>
    <string name="title_activity_report">Send alert</string>
    <string name="title_activity_route_detail_splash">Understand the route</string>
    <string name="title_activity_rss">News</string>
    <string name="title_activity_sugestao">Suggestion</string>
    <string name="which_address">Looking for:</string>
    <string name="which_destination">Confirm the destination:</string>
    <string name="which_origin">Confirm the origin:</string>
    <string name="outro">OTHER</string>
    <string name="sinalizacao">SIGNALLING</string>
    <string name="loc_verifique_gps">Check your GPS</string>
    <string name="null_map">Error loading map</string>
    <string name="loc_no_location_permission">No permission to access location</string>
    <string name="loc_location_unavailable">Current location unavalable. Check you GPS.</string>
    <string name="distancia_total">Total distance: </string>
    <string name="open_now">OPEN NOW</string>
    <string name="closed_now">CLOSED NOW</string>
    <string name="closed">CLOSED</string>
    <string name="obrigado_por_avisar">Thanks for letting us know!</string>
    <string name="nenhum_alerta_selecionado">No alert selected</string>
    <string name="bike_lane_info">Bike lane:</string>
    <string name="tem_wifi">Has Wifi? Yes</string>
    <string name="tem_wifi_nao">Has Wifi? No</string>
    <string name="estacao_ciclo_sampa">Ciclo Sampa Station</string>
    <string name="em_operacao">NORMAL OPERATION</string>
    <string name="bikes_disponiveis">Available bikes: </string>
    <string name="vagas_livres">Free parking spots: </string>
    <string name="atualizado_as">Last update: </string>
    <string name="em_manutencao_implantacao">MAINTENANCE / IMPLEMENTATION</string>
    <string name="estacao_bike_sampa">Bike Sampa Station</string>
    <string name="parking_spaces">Parking spaces: </string>
    <string name="numero_de_paraciclos">Nº of bike racks: </string>
    <string name="possui_emprestimo_bicicleta">Has bikes to lend</string>
    <string name="possui_emprestimo_bicicleta_nao">Doesn\'t have bikes to lend</string>
    <string name="openingHours">Opening hours: </string>
    <string name="details">Details: </string>
    <string name="alerta_em">Alert on: </string>
    <string name="acesso_ciclovia_marginal">Access to Marginal Pinheiros bike lane</string>
    <string name="loc_selecione_manualmente">Error getting current location. Please select manually the address.</string>
    <string name="posicao">Position: </string>
    <string name="problema_sinalizacao">Signalling problem</string>
    <string name="route_error_check_connection">Error creating route. Check you connection.</string>
    <string name="via_esburacada">Bumpy street</string>
    <string name="inclinacao">Inclination: </string>
    <string name="loc_selecione_localizacao">Please select location</string>
    <string name="toast_thanks">Thanks!</string>
    <string name="rede_nao_disponivel">Network not available</string>
    <string name="inclinacao_maxima">Max inclination</string>
    <string name="on_bikelanes">on bikelanes</string>
    <string name="route_nenhuma_rota_encontrada">Zero routes found</string>
    <string name="drawerexp_explanation1">Choose which items to see on the map:</string>
    <string name="drawerexp_explanation2">(You\'ll be able to change this after)</string>
    <string name="cancelar">Cancel</string>
    <string name="enviar_alerta">Send alert</string>
    <string name="route_explanation">Click on the elevation graph to see the respective point on map.</string>
    <string name="route_tab_explanation">On the route mode, the bottom tab shows details of the selected route, with it\'s elevation profile.</string>
    <string name="curta_no_facebook">Like us on Facebook!</string>
    <string name="feed_not_loaded">Error loading feed =/</string>
    <string name="elevacao_indisponivel">Elevation data unavailable</string>
    <string name="pesquisar_no_mapa">Search on map</string>
    <string name="seu_local">Your location</string>
    <string name="ir_para_mapa">Go to map</string>
    <string name="loc_no_loc_permission_exp">Without this permission, some functions of the app, like routing, won\'t work.</string>
    <string name="loc_buscando_localizacao">Waiting for your location…</string>
    <string name="type_of_alert">TYPE OF ALERT</string>
    <string name="etReportDetailsError">Mandatory field</string>
    <string name="rbReportError">Please choose the alert type</string>
    <string name="your_bike_is_here">Your bike is here</string>
    <string name="i_parked_here">I PARKED HERE</string>
    <string name="remove">REMOVE</string>
    <string name="saved_place">Saved place</string>
    <string name="mandatory_field">Mandatory field</string>
    <string name="atencao">Warning</string>
    <string name="toomuchmarkers">Visualizing too much items in a broad area can make the app run slow</string>
    <string name="dont_show_again">Don\'t show again</string>
</resources>