<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    android:background="@color/app_blue"
    tools:context=".Activities.SugestaoActivity" >

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:layout_marginTop="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="10dp"
		android:textSize="18sp"
		android:text="@string/envie_sugestao" />

	<View
		android:layout_width="60dp"
		android:layout_height="1dp"
		android:layout_gravity="center_horizontal"
		android:background="@color/water_blue"/>
	    
	<EditText
		android:id="@+id/nome"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:hint="@string/seu_nome"
		/>

	<EditText
		android:id="@+id/email"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:inputType="textEmailAddress"
		android:hint="@string/seu_email"
		/>


	<EditText
		android:id="@+id/mensagem"
		android:layout_weight="1"
		android:layout_width="match_parent"
		android:layout_margin="20dp"
		android:layout_height="0dp"
		android:hint="@string/texto_do_email"
		/>

	<Button
		android:id="@+id/enviar_sugestao"
		android:layout_height="60dp"
		android:layout_width="match_parent"
		android:background="@drawable/bt_water_blue"
		android:text="@string/enviar_email"
		android:textAllCaps="true"
		android:onClick="sendEmail"
		/>
    
</LinearLayout>
