<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:layout_margin="20dp"
        android:text="@string/atencao"
        android:textColor="@color/dark_text"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/toomuchmarkers"
        android:textColor="@color/dark_text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ToggleButton
            android:id="@+id/tb_toomuchmarkers_donotdisplay"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/bt_toggle"
            android:textOn=""
            android:textOff=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/dont_show_again"
            android:textColor="@color/dark_text"
            />

    </LinearLayout>

    <Button
        android:id="@+id/bt_toomuchmarkers_ok"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bt_water_blue"
        android:text="@string/ok"/>

</LinearLayout>