<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/app_blue"
    tools:context=".DrawerExpActivity">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo_512"
        android:layout_margin="20dp"/>

    <View
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/water_blue"/>

    <TextView
        android:text="@string/drawerexp_explanation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"
        android:textColor="#EEE"/>

    <TextView
        android:text="@string/drawerexp_explanation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="12sp"
        android:textColor="#CEEE"
        />

    <ListView
        android:id="@+id/list_drawer_exp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:padding="0dp"
        android:gravity="center"
        android:divider="#666"
        android:layout_gravity="center_horizontal"
        android:dividerHeight="0dp"
        android:fadeScrollbars="false">
    </ListView>


    <Button
        android:text="@string/ir_para_mapa"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="#FFF"
        android:paddingRight="3dp"
        android:paddingBottom="3dp"
        android:background="@drawable/bt_lightblue"
        android:onClick="finishExp"/>

</LinearLayout>