<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

	    <fragment
        	android:id="@+id/map"
        	class="com.google.android.gms.maps.SupportMapFragment"
    		android:layout_width="match_parent"
    		android:layout_height="match_parent"/>

	    <LinearLayout
			android:id="@+id/header"
            android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:gravity="top|center_horizontal"
	        android:padding="12dp"
	        android:layout_margin="6dp"
	        android:layout_alignParentTop="true"
	        android:orientation="horizontal"
	        android:background="@drawable/bg_box_shadow"
			android:layout_gravity="center_vertical"
	        android:weightSum="1"/>

			<RelativeLayout
				android:id="@+id/rl_bottom_options"
				android:layout_height="348dp"
				android:layout_width="match_parent"
				android:translationY="128dp"
				android:layout_alignParentBottom="true">

				<ToggleButton
					android:id="@+id/route_bt"
					android:layout_alignParentEnd="true"
					android:layout_alignParentBottom="true"
					android:layout_marginEnd="11dp"
					android:layout_marginBottom="277dp"
					android:layout_width="55dp"
					android:layout_height="55dp"
					android:background="@drawable/bt_route"
					android:textOff=""
					android:textOn=""
					android:onClick="onRouteButtonClick"
					android:translationX="0dp"
					/>

				<Button
					 android:id="@+id/bt_send_alert"
					 android:layout_alignParentEnd="true"
					 android:layout_alignParentBottom="true"
					 android:layout_marginEnd="11dp"
					 android:layout_marginBottom="208dp"
					 android:layout_width="55dp"
					 android:layout_height="55dp"
					 android:background="@drawable/bt_send_alert"
					 android:onClick="addFunction"
					/>

				<Button
					android:id="@+id/my_location"
					android:layout_alignEnd="@id/bt_send_alert"
					android:layout_alignStart="@id/bt_send_alert"
					android:layout_alignParentBottom="true"
					android:layout_marginBottom="139dp"
					android:layout_width="55dp"
					android:layout_height="55dp"
					android:background="@drawable/bt_my_location"
					android:onClick="findMe"
					/>

				<Button
					android:id="@+id/notify_solved"
					android:layout_alignParentBottom="true"
					android:layout_centerHorizontal="true"
					android:layout_marginBottom="184dp"
					android:layout_width="200dp"
					android:textSize="14sp"
					android:layout_height="45dp"
					android:textColor="#FFFFFF"
					android:text="@string/notifySolved"
					android:background="@drawable/bt_water_blue"
					android:onClick="notifySolved"
					android:translationY="600dp"
					android:visibility="gone"
					/>

				<Button
					android:id="@+id/bt_parked_here"
					android:layout_alignParentBottom="true"
					android:layout_centerHorizontal="true"
					android:layout_marginBottom="184dp"
					android:paddingStart="45dp"
					android:layout_height="50dp"
					android:layout_width="200dp"
					android:textSize="14sp"
					android:text="@string/i_parked_here"
					android:background="@drawable/bt_parked_here"
					android:translationY="600dp"
					android:visibility="gone"
					android:onClick="setParkedHere"
					/>

				<Button
					android:id="@+id/bt_remove_parked_here"
					android:layout_alignParentBottom="true"
					android:layout_centerHorizontal="true"
					android:layout_marginBottom="184dp"
					android:layout_height="45dp"
					android:layout_width="200dp"
					android:textSize="14sp"
					android:text="@string/remove"
					android:background="@color/dark_text"
					android:translationY="600dp"
					android:visibility="gone"
					android:onClick="removePlace"
					/>

				<LinearLayout
					android:id="@+id/ll_route_panel"
					android:layout_width="match_parent"
					android:layout_height="128dp"
					android:layout_alignParentBottom="true"
					android:orientation="vertical"
					android:paddingTop="3dp"
					android:layout_marginBottom="-3dp"
					android:background="@drawable/viewpager_box_border"
					android:visibility="gone">

					<Spinner
						android:id="@+id/sp_route_priority"
						android:layout_width="match_parent"
						android:layout_height="30dp"/>

					<RelativeLayout
						android:id="@+id/rl_route_details"
						android:layout_width="match_parent"
						android:layout_height="98dp">

						<include layout="@layout/route_detail_fragment"/>

						<ProgressBar
							android:id="@+id/pb_loading_route"
							android:layout_width="30dp"
							android:layout_height="30dp"
							android:gravity="center"/>

					</RelativeLayout>

				</LinearLayout>

				<android.support.v4.view.ViewPager
					android:id="@+id/vp_route_details"
					android:layout_height="98dp"
					android:layout_width="match_parent"
					android:layout_alignParentBottom="true"
					android:paddingTop="3dp"
					android:layout_marginBottom="-3dp"
					android:background="@drawable/viewpager_box_border"
					android:visibility="gone">


				</android.support.v4.view.ViewPager>

			</RelativeLayout>
	        
	 </RelativeLayout>

	<ListView
        android:id="@+id/left_drawer"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:padding="0dp"
        android:layout_gravity="start"
        android:divider="#00000000"
        android:dividerHeight="3dp"
        android:background="@color/drawer_blue">
	</ListView>

</android.support.v4.widget.DrawerLayout>

